--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 
 <head>
@@ -12,11 +11,11 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="English">
 
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.1.0/css/all.css"
-        integrity="sha512-ajhUYg8JAATDFejqbeN7KbF2zyPbbqz04dgOLyGcYEk/MJD3V+HJhJLKvJ2VVlqrr4PwHeGTTWxbI+8teA7snw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.3.0/font-awesome-animation.min.css"
         integrity="sha512-Po8rrCwchD03Wo+2ibHFielZ8luDAVoCyE9i6iFMPyn9+V1tIhGk5wl8iKC9/JfDah5Oe9nV8QzE8HHgjgzp3g=="
@@ -33,29 +32,91 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="theme-color" content="#ffffff">
 
+    <style>
+        @-webkit-keyframes bg-move {
+    0% {
+     background-position:50%
+    }
+    to {
+     background-position:-1000px
+    }
+   }
+   @keyframes bg-move {
+    0% {
+     background-position:50%
+    }
+    to {
+     background-position:-1000px
+    }
+   }
+
+    body { 
+  background: url(assets/img/backgrounds/1.png); 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-repeat:repeat,no-repeat;
+  background-color:#ededed;
+  background-position:0%;
+  background-size:auto 100%;
+  height:100%;
+  width:100%;
+  position:static;
+  left:0;
+  top:0;
+  z-index:9;
+  -webkit-animation:bg-move 50s linear infinite forwards;
+  animation:bg-move 50s linear infinite forwards;
+}
+    </style>
+
 </head>
 
 <body>
-
-    <div class="row g-0">
+    <div class="logo-brand">
+        <a href="/"><h1><b>dane.lol</b></h1></a>
+    </div>
+    <div class="row g-0" style="overflow: hidden;">
         <div class="col-lg-12">
             <div id="main-content" class="leftside d-flex justify-content-center align-items-center">
                 <div class="main-content" style="text-align: center;">
-                    <div class="country-title">
                         <div class="country-question">
-                            <h1>What country is this?</h1>
+                            <h1><b>What country is this?</b></h1>
                         </div>
-                    </div>
+                        <br>
                     <div class="country-image">
-                        <img src="assets/img/countries/america/na-black.svg">
+                        <div id="country-image"><img id="countryimg-canvas" src="assets/img/countries/america/na-black.svg"></div>
                     </div>
+                    <br>
                     <div class="country-options">
-                        
+                        <div class="input-group mb-3">
+                            <input type="text" class="form-control" aria-describedby="inputGroup-sizing-default">
+                            <div class="input-group-append">
+                                <button id="btn-guess" class="btn btn-outline-wht" type="button">Guess</button>
+                          </div>
+                    </div>
+                </div>
+                <div class="hint-options">
+                    <div class="hint-button">
+                        <p id="hint-btn" onclick="getNewHint();"><b><i class="fa-solid fa-circle-question"></i> Get a hint!</b>
+                    </div>
+                    <div class="hints-section">
+                    </div>
+                    <br>
+                    <div class="hint-counter">
+                        <p id="remaining-hints">You have <span style="color: aqua"><b>0</b></span> hints remaining.</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+</div>
+<div class="row">
+    <div class="col-12">
+        
+    </div>
+</div>
 
     <script>
         window.onload = function () {
@@ -69,16 +130,13 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
       integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
       crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.1.0/js/all.js"
-      integrity="sha512-vn7pO1RiR0IT5T9K+USTmMfkTaecOtFtCCV0JvT+j8ZPBujq6C3P5J2sHttG7D41pBPqLCih+7lIXamnFodtUw=="
-      crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/js/all.min.js" integrity="sha512-yFjZbTYRCJodnuyGlsKamNE/LlEaEAxSUDe5+u61mV8zzqJVFOH7TnULE2/PP/l5vKWpUNnF4VGVkXh3MjgLsg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js"
       integrity="sha512-WFN04846sdKMIP5LKNphMaWzU7YpMyCU245etK3g/2ARYbPK9Ub18eG+ljU96qKRCWh+quCY7yefSmlkQw1ANQ=="
       crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/countup.js/2.0.0/countUp.min.js"
       integrity="sha512-E0zfDwA1CopT4gzJmj9tMpd7O6pTpuybTK58eY1GwqptdasUohyImuualLt/S5XvM8CDnbaTNP/7MU3bQ5NmQg=="
       crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        <script src="https://raw.githubusercontent.com/wilq32/jqueryrotate/master/jQueryRotate.js"></script>
       <script src="js/game.js"></script>
 </body>
 
