--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 <body>
     <div class="logo-brand">
-        <a href="/"><h1><b>dane.lol</b></h1></a>
+        <a href="https://dane.lol"><h1><b>dane.lol</b></h1></a>
     </div>
     <div class="row g-0" style="overflow: hidden;">
         <div class="col-lg-12">
@@ -94,10 +94,8 @@
                     <br>
                     <div class="country-options">
                         <div class="input-group mb-3 col-md-12">
-                            <input id="guess-box" type="text" class="form-control" aria-describedby="inputGroup-sizing-default">
-                            <div class="input-group-append">
-                                <button id="btn-guess" class="btn btn-outline-wht" onclick="makeGuess();" type="button">Guess</button>
-                          </div>
+                            <input id="guess-box" type="text" class="form-control" aria-describedby="inputGroup-sizing-default"></input>
+                            <button id="btn-guess" class="btn btn-outline-wht" onclick="makeGuess();" type="button">Guess</button>
                     </div>
                 </div>
                 <div class="hint-options">
@@ -111,6 +109,9 @@
                         <p id="remaining-hints">You have <span style="color: aqua"><b>0</b></span> hints remaining.</p>
                     </div>
                 </div>
+                <div class="lives-remaining">
+                    <p id="tries-remaining">You have <span style="color: red;">3</span> guesses remaining!</p>
+                </div>
             </div>
         </div>
     </div>
@@ -123,7 +124,7 @@
         <div id="modal-body" class="modal-body d-flex justify-content-center align-items-center">
             <div class="score-content" style="text-align: center;">
                 <h3>You scored:</h3>
-                <h1 id="losing-score" style="color: red;">0</h1>
+                <h1 id="losing-score" style="color: red;"><b>0</b></h1>
                 <p id="losing-comment">Better luck next time!</p>
                 <hr>
                 <p>Want to share with your friends?</p>
