Added how to play modal on start.

--- a/index.html
+++ b/index.html
@@ -118,7 +118,10 @@
                     </div>
                 </div>
                 <div class="lives-remaining">
-                    <p id="tries-remaining">You have <span style="color: red;">3</span> guesses remaining!</p>
+                    <p id="tries-remaining">You have <span style="color: red;"><b>3</b></span> guesses remaining.</p>
+                </div>
+                <div class="skips-remaining">
+                    <p id="skip-amt-remaining">You have <span style="color: purple;"><b>20</b></span> skips remaining.</p>
                 </div>
             </div>
         </div>
